<resources>
    <string name="app_name">MedicaBox</string>
    <string name="email">Email </string>
    <string name="pass">Senha</string>
    <string name="insertPass">Insira sua Senha</string>
    <string name="insertEmail">Insira seu Email</string>
    <string name="viewPass">Mostrar Senha</string>
    <string name="dontAccount">Não possui uma conta?</string>
    <string name="completeLog">Entrar</string>
    <string name="completeReg">Criar Conta</string>
    <string name="completeAuth">Efetuar Autenticação</string>
    <string name="code">Código:</string>
    <string name="insertCode">Insira o código enviado</string>
    <string name="verifyAccount">Verificação de Conta</string>
    <string name="clickVerify">Já fui verificado</string>
    <string name="textVerify">Acesse seu email e verifique seu cadastro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicName">Nome remédio</string>
    <string name="textRecoverPass">Esqueceu sua Senha?</string>
    <string name="recoverPass">Recuperar Senha</string>
    <string name="sendRecoverPass">Recuperar Senha</string>
    <string name="bula_teste"><![CDATA[Abcler Abnat AIRELA INDÚSTRIA FARMACÊUTICA LTDA. Atualizado em 12/02/2021 IDENTIFICAÇÃO DO MEDICAMENTO Abcler® Abnat citrato de colina + betaína + metionina Solução 1000 mg/mL + 500 mg/mL + 100 mg/mL FORMA FARMACÊUTICA E APRESENTAÇÃO: Solução oral Cartucho contendo flaconetes de 10 mL. Cartucho contendo frasco de plástico transparente com 120 mL + copo medida. USO ORAL USO ADULTO E PEDIÁTRICO ACIMA DE 12 ANOS COMPOSIÇÃO: Cada 10 mL de Abcler® Abnat contém: citrato de colina 1000 mg betaína 500 mg dl-metionina 100 mg veículo q.s.p. 10 mL Veículo: sorbitol 70%, aroma de abacaxi, corante amarelo de tartrazina, sacarina sódica di-hidratada, álcool etílico, metilparabeno, propilparabeno e água purificada. INFORMAÇÕES AO PACIENTE PARA QUE ESTE MEDICAMENTO É INDICADO? Abcler® Abnat é um produto composto por 3 aminoácidos: dl-metionina, colina e betaína. Indicado no tratamento dos distúrbios metabólicos hepáticos. COMO ESTE MEDICAMENTO FUNCIONA? Abcler® Abnat age principalmente sobre o fígado evitando o acúmulo de gordura nesse órgão e auxiliando na remoção de restos metabólicos e outras toxinas. Previne a infiltração (entrada) de gordura no fígado. Início de ação: cerca de 1 hora após a ingestão. QUANDO NÃO DEVO USAR ESTE MEDICAMENTO? Este medicamento é contraindicado para pessoas hipersensíveis aos componentes da fórmula. Este medicamento é contraindicado para pessoas portadoras de doenças graves do fígado, tais como cirrose hepática proveniente do consumo de álcool. Este medicamento é contraindicado para menores de 12 anos de idade. O QUE DEVO SABER ANTES DE USAR ESTE MEDICAMENTO? Em pacientes com doenças graves no fígado, a metionina deve ser usada com cautela, pois pode desencadear encefalopatia hepática (doença cerebral que surge em consequência das doenças graves no fígado). Abcler® Abnat não deve ser ingerido em jejum, pois ocasionalmente podem ocorrer problemas gástricos. Gravidez e Lactação Informe seu médico a ocorrência de gravidez durante o tratamento ou após o seu término. Este medicamento não deve ser utilizado por mulheres grávidas sem orientação médica ou do cirurgião-dentista. Informe também se está amamentando. Durante o período de aleitamento materno ou doação de leite humano, só utilize medicamentos com o conhecimento do seu médico ou cirurgião-dentista, pois alguns medicamentos podem ser excretados no leite humano, causando reações indesejáveis no bebê. Informações importantes sobre um dos componentes do medicamento Atenção: este medicamento contém CORANTES que podem, eventualmente, causar reações alérgicas. Interações medicamentosas Não há relatos de interações medicamentosas com o produto. Informe ao seu médico ou cirurgião-dentista se você está fazendo uso de alguns outros medicamentos. ONDE, COMO E POR QUANTO TEMPO POSSO GUARDAR ESTE MEDICAMENTO? Cuidados de conservação Conservar em temperatura ambiente (temperatura entre 15 e 30°C). Proteger da luz e umidade. Número de lote, data de fabricação e validade: vide embalagem. Não use medicamento com prazo de validade vencido. Guarde-o em sua embalagem original. Prazo de validade: 24 meses a partir da data de fabricação. Ao comprar qualquer medicamento, verifique o prazo de validade. Características físicas e organolépticas do produto Abcler® Abnat é uma solução límpida amarela, com sabor e odor de abacaxi. Antes de usar, observe o aspecto do medicamento. Caso ele esteja no prazo de validade e você observe alguma mudança no aspecto, consulte o farmacêutico para saber se poderá utilizá-lo. TODO MEDICAMENTO DEVE SER MANTIDO FORA DO ALCANCE DAS CRIANÇAS. COMO DEVO USAR ESTE MEDICAMENTO? Uso oral Posologia Adultos: 1 flaconete, até 3 vezes por dia, antes das principais refeições, ou a critério do médico. Não ultrapasse as dosagens recomendadas, exceto com orientação médica. Durante o tratamento, recomenda-se não ingerir bebidas alcoólicas. Dose máxima diária recomendada: 3 flaconetes/dia que equivale a 3000 mg/dia de colina, 1500 mg/dia de betaina e 300 mg de metionina. Siga corretamente o modo de usar. Em caso de dúvida sobre este medicamento, procure orientação do farmacêutico. Não desaparecendo os sintomas, procure orientação de seu médico ou cirurgião-dentista. O QUE DEVO FAZER QUANDO EU ME ESQUECER DE USAR ESTE MEDICAMENTO? No caso de esquecimento, introduzir novamente e administrar a medicação para a continuação do tratamento, não devendo, portanto, dobrar a dose porque se esqueceu de tomar a anterior. Em caso de dúvidas, procure orientação do farmacêutico ou de seu médico, ou cirurgião- dentista. QUAIS OS MALES QUE ESTE MEDICAMENTO PODE ME CAUSAR? Ao classificar a frequência das reações, utilizamos os seguintes parâmetros: Categoria Frequência Muito comum ≥ 10% Comum ≥ 1% e < 10% Incomum ≥ 0,1% e < 1% Raro ≥ 0,01% e < 0,1% Muito raro < 0,01% Desconhecida Não pode ser estimada pelos dados disponíveis Abcler® Abnat é bem tolerado. Não há relatos de reações adversas relacionadas a seu uso nas doses recomendadas. Reação rara: coceira; dor de cabeça; distúrbios gástricos como náuseas e pirose (azia). Informe ao seu médico, cirurgião-dentista ou farmacêutico o aparecimento de reações indesejáveis pelo uso de medicamento. Informe também a empresa através de seu serviço de atendimento. O QUE FAZER SE ALGUÉM USAR UMA QUANTIDADE MAIOR DO QUE A INDICADA DESTE MEDICAMENTO? Ao considerar as características farmacológicas dos componentes desse medicamento, é pouco provável que a superdose acidental de doses muito acima das recomendadas determine efeitos adversos graves. Caso ocorram, recomenda-se procurar socorro médico para adotar medidas de remoção do material não absorvido pelo organismo. Em caso de uso de grande quantidade deste medicamento, procure rapidamente socorro médico e leve a embalagem ou bula do medicamento, se possível. Ligue para 0800 722 6001, se você precisar de mais orientações. DIZERES LEGAIS Siga corretamente o modo de usar, não desaparecendo os sintomas procure orientação médica. MS: 1.4493.0011 Farmacêutica Responsável: Gisele Fuchter Filipi – CRF/SC 5.201 Airela Indústria Farmacêutica LTDA Rodovia SC 440, km 01, nº 500 – Bairro: Ilhota Pedras Grandes/SC – CEP: 88720-000 CNPJ: 01.858.973/0001-29 Indústria Brasileira]]></string>
    <string name="infoRem">Informações do Remédio:</string>
    <string name="butAddRem">Clique para Adicionar</string>
    <string name="confPass">Confirme sua senha</string>
    <string name="infoBox">Informações da Caixa</string>
    <string name="infoRow">Informações de cada linha</string>
    <string name="myAccount">Opções</string>
    <string name="save_contact">Save Contact</string>
    <string name="delete">Delete</string>
    <string name="Save">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="photoUser">Foto do Usuário</string>
    <string name="phoneNumber">Número de Telefone</string>
    <string name="editEmail">Email</string>
    <string name="cuidador">Cuidador</string>
    <string name="voc_um_cuidador">Você é um cuidador</string>
    <string name="userName">Nome do Usuário</string>
    <string name="voc_um_cuidado">Você é um cuidador?</string>
    <string name="voc_n_o_um_cuidador">Você não é um cuidador</string>
    <string name="medicabox">MedicaBox</string>
    <string name="sua_caixa_organizadora">Sua caixa organizadora</string>
    <string name="verificarConta">Verificação de Conta</string>
    <string name="addBox">Adicionar à caixa</string>
    <string name="configTime">Configurar Horário</string>
    <string name="textTime">Defina o intervalo de tempo entre as doses</string>
    <string name="hintTime">Intervalo de tempo</string>
    <string name="timeInterval">Tempo de intervalo</string>
    <string name="clique_para_conectar_o_bluetooth">Clique para Conectar o Bluetooth</string>
    <string name="insertWifiPass">Coloque a senha da rede</string>
    <string name="hintInsertWifiPass">Insira a senha da rede</string>
    <string name="connect">Conectar</string>
    <string name="search">Procurar</string>
    <string name="firstConsum">Quando foi que você tomou a primeira dose?</string>
    <string name="lastDo">Última Etapa</string>
    <string name="selecione_o_andar">Selecione o andar</string>
    <string name="conectBox">Conectar a Caixa</string>
    <string name="conectMessage">Conecte-se antes a rede Envio para de prosseguir</string>
    <string name="digiteCode">Digite o Código IP da Caixa</string>
    <string name="digiteCode_hint">Digite o código aqui</string>
    <string name="buttonSendBox">Enviar usuário para a caixa</string>
    <string name="seePac">Veja os seus pacientes</string>
    <string name="seeBox">Qual caixa deseja observar?</string>
    <string name="selectPac">Selecione a caixa de qual paciente deseja adicionar</string>
    <string name="addCuid">Escreva aqui o email do cuidador</string>
    <string name="addNurse">Adicionar Cuidador</string>
    <string name="textNursing">Adicionar Cuidador</string>
    <string name="NurseRemove">Remover Cuidador</string>
    <string name="confirmNurseEmail">Confirme o email do cuidador</string>
    <string name="remover_cuidador">Remover Cuidador</string>
    <string name="informa_es_dos_medicamentos">Informações dos Medicamentos</string>
    <string name="quais_medicamentos_deseja_observar">Quais medicamentos deseja observar?</string>
    <string name="pesquise_o_medicamento">Pesquise o medicamento</string>
</resources>