<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/medicabox"
        android:textColor="@color/cyanBold"
        android:textSize="60sp"
        android:textStyle="bold"
        android:id="@+id/medicName"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/geral"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/text_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="7dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:background="@drawable/enter_info_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:hint="@string/insertEmail"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_shape"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="7dp"
                android:text="@string/pass" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:background="@drawable/enter_info_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:hint="@string/insertPass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:id="@+id/confPass">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_shape"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="7dp"
                android:text="@string/confPass" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editConfPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:background="@drawable/enter_info_shape"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:hint="@string/insertPass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="start|center_vertical"
                android:padding="8dp"
                android:textColor="@color/cyan"
                android:textStyle="bold"
                android:buttonTint="@color/cyanBold"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/viewPass" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/logProgBar"
            android:visibility="invisible" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/but_log_bcg"
        android:text="@string/completeReg"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/butReg"/>

</LinearLayout>