<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.NursingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_shape"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/textNursing"
        android:gravity="center"
        android:padding="25dp"
        android:textSize="34sp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_info_shape"
        android:padding="14dp"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/addCuid"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        android:gravity="center"
        android:id="@+id/editUid"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/but_log_bcg"
        android:textColor="@color/cyan"
        android:textAllCaps="false"
        android:fontFamily="@font/open_sans_bold"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNurse"
        android:id="@+id/btnSend"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnButton"
        android:src="@drawable/outline_arrow_back_24"
        android:backgroundTint="@color/cyanBold"
        android:layout_marginTop="500dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>